refactored accounts tool

--- a/config/tasks.yaml
+++ b/config/tasks.yaml
@@ -5,3 +5,18 @@ list_my_accounts_task:
   expected_output: >
     A formatted list of accounts accessible to the account manager, including all relevant details.
 
+list_my_brands_task:
+  description: >
+    List all the Retail Media brands accessible to the account manager.
+
+  expected_output: >
+    A formatted list of brands accessible to the account manager, including all relevant details.
+
+list_my_retailers_task:
+  description: >
+    List all the Retail Media retailer accessible to the account manager.
+
+  expected_output: >
+    A formatted list of retailers accessible to the account manager, including all relevant details.
+
+
