--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 CRITEO_CLIENT_ID=
 CRITEO_CLIENT_SECRET=
 OPENAI_API_KEY=
+SERPER_API_KEY=
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-01/retail-media/
