--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 CRITEO_CLIENT_ID=
 CRITEO_CLIENT_SECRET=
 OPENAI_API_KEY=
+OPENAI_MODEL_NAME=gpt-4o
 SERPER_API_KEY=
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-01/retail-media/
