--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # output
 
-output/**/*
+output/**/*.log
+output/**/*.md
+output/**/*.json
+output/**/*.pkl
+output/**/*.png
+output/**/*.jpg
+output/**/*.jpeg
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
