--- a/part_1/src/part_1/config/tasks.yaml
+++ b/part_1/src/part_1/config/tasks.yaml
@@ -26,8 +26,9 @@ retailers:
 analytics:
   description: >
     Analyze the brands and retailers for each account. 
-    Sum the the number of auction and preferrred retailers. 
-    Count the number of brands and retailers.
+    Count the number of brands.
+    Count the number of retailers.
+
   expected_output: >
     A list of analytics for each account formatted as a table in Markdown.
   agent: account_manager
