better agents better tasks somework on lineitems and charts 1st attempt at using ollama - not successful

--- a/part_1/src/part_1/config/tasks.yaml
+++ b/part_1/src/part_1/config/tasks.yaml
@@ -1,6 +1,6 @@
 accounts:
   description: >
-    Retrieve a list of accounts available to this user.
+    Retrieve a list of accounts available to this user. Use the Retail Media REST API and remember the result. The results are paginated, so you may need to make multiple requests, do not make more than the total number of pages.
   expected_output: >
     A list of accounts available to this user formatted as a table in Markdown.
   agent: account_manager
