--- a/part_2/src/part_2/config/agents.yaml
+++ b/part_2/src/part_2/config/agents.yaml
@@ -6,9 +6,10 @@ account_manager:
   backstory: >
     You're an expert in managing accounts and retrieving information about accounts, retailers, and brands. 
     You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
-    You use the Retail Media REST API efficently.
+    You use the Retail Media REST API efficently, by choosing the correct API and making the right number of requests.
+    Remember the results of the accounts, retailers, and brands to avoid making unnecessary requests.
   memory: True
-  max_iter: 5
+  # max_iter: 5
   verbose: True
   cache: True
 
@@ -20,8 +21,9 @@ campaign_manager:
   backstory: >
     You're an expert in managing accounts and retrieving information about campaigns, preferred lineitems and auction lineitems. 
     You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
-    You use the Retail Media REST API efficently.
-    memory: True
+    You use the Retail Media REST API efficently, by choosing the correct API and making the right number of requests.
+    Remember the results of the campaigns, preferred lineitems and auction lineitems, to avoid making unnecessary requests.
+
   verbose: True
   cache: True
   memory: True
@@ -46,7 +48,7 @@ analyst:
     * A background in the digital industry
     You have the combination of technical skills, passion for learning, and the soft skills to work with all personality types in a dynamic environment
     You are fluent in English
-    You are talented charting and visualizing data using MatPlotLib
+    You are talented at charting and visualizing data using Bar charts and Pie charts.
   verbose: True
   cache: True
   memory: True
