--- a/part_2/src/part_2/config/tasks.yaml
+++ b/part_2/src/part_2/config/tasks.yaml
@@ -17,8 +17,9 @@ campaigns:
 auction_lineitems:
   description: >
     Iterate through the {campaigns list}, and for each {campaign} use the {campaign id} to get the lineitems.
+    Write a JSON file with the path 'output/{campaign name}.json' containing the list of auction lineitems.
   expected_output: >
-    A list of auction lineitems for the campaign formatted as a table in Markdown.
+    A list of auction lineitems for the campaign formatted as JSON.
   agent: campaign_manager
   context:
     - campaigns
@@ -26,8 +27,9 @@ auction_lineitems:
 preferred_lineitems:
   description: >
     Iterate through the {campaigns list}, and for each {campaign} use the {campaign id} to get the lineitems. If there total items across all pages is zer simply provide an empty list.
+    Write a JSON file in the 'output' directory with the name 'output/{campaign name}.json containing the list of preferred lineitems.
   expected_output: >
-    A list of preferred lineitems for the campaign formatted as a table in Markdown.
+    A list of preferred lineitems for the campaign formatted as json.
   agent: campaign_manager
   context:
     - campaigns
@@ -54,7 +56,7 @@ lineitems_budget_chart:
     for each month. with the output like this example 
     [{date: '2021-01-01', auction: 1000.00, preferred: 2000.00},{date: '2021-02-01', auction: 1500.00, preferred: 2500.00}]
     2. Produce a bar chart for each campaign using the data from step 1, where the x-axis is the date and the y-axis is the total budget, 
-    the file name is the campaign name and its ID and is in the 'output' folder,
+    the file name is the campaign name and its ID and the path is 'output',
     the chart title is the campaign name and its ID,
     the categories ar the date,
     the values are the auction and preferred values.
