--- a/part_1/pyproject.toml
+++ b/part_1/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["Your Name <you@example.com>"]
 [tool.poetry.dependencies]
 python = ">=3.12,<=3.13"
 crewai = { extras = ["tools"], version = "^0.51.0" }
+langchain-ollama = "^0.1.3"
 
 
 [tool.poetry.scripts]
