--- a/part_2/.env.example
+++ b/part_2/.env.example
@@ -1,10 +1,6 @@
 CRITEO_CLIENT_ID=
 CRITEO_CLIENT_SECRET=
 OPENAI_API_KEY=
-OPENAI_MODEL_NAME=gpt-3.5-turbo
-# for ollama
-# OPENAI_API_BASE= http://localhost:11434/v1
-# OPENAI_MODEL_NAME=crewai-llama2
-# OPENAI_API_KEY=NA
+OPENAI_MODEL_NAME=gpt-4o-mini
 SERPER_API_KEY=
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-01/retail-media/
