--- a/part_1/.env.example
+++ b/part_1/.env.example
@@ -1,5 +1,5 @@
 CRITEO_CLIENT_ID=
 CRITEO_CLIENT_SECRET=
 OPENAI_API_KEY=
-OPENAI_MODEL_NAME=gpt-3.5-turbo
+OPENAI_MODEL_NAME=gpt-4o-mini
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-01/retail-media/
