removed auth.py and replaced with access.py tests now use FileWriterTool

--- a/part_2/src/part_2/config/agents.yaml
+++ b/part_2/src/part_2/config/agents.yaml
@@ -1,34 +1,35 @@
-account_manager:
-  role: >
-    Account manager
-  goal: >
-    Provide lists of accounts, retailers or brands
-  backstory: >
-    You're an expert in managing accounts and retrieving information about accounts, retailers, and brands. 
-    You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
-    You use the Retail Media REST API efficently, by choosing the correct API. 
-    Dont make more requests that is necessary by checking the 'totalPages' and make the right number of requests.
-    Remember the results of the accounts, retailers, or brands to avoid making unnecessary requests.
-  memory: True
-  # max_iter: 5
-  verbose: True
-  cache: True
-
-# campaign_manager:
+# account_manager:
 #   role: >
-#     Campaign Manager
+#     Account manager
 #   goal: >
-#     Maintain retail media campaigns
+#     Provide lists of accounts, retailers or brands
 #   backstory: >
-#     You're an expert in managing accounts and retrieving information about campaigns for a specific {accountId}. 
+#     You're an expert in managing accounts and retrieving information about accounts, retailers, and brands. 
 #     You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
-#     You use the Retail Media Campaigns  API efficently.
+#     You use the Retail Media REST API efficently, by choosing the correct API. 
 #     Dont make more requests that is necessary by checking the 'totalPages' and make the right number of requests.
-#     Remember the results of the campaigns API to avoid making unnecessary requests.
-    
+#     Remember the results of the accounts, retailers, or brands to avoid making unnecessary requests.
+#   memory: True
 #   verbose: True
 #   cache: True
-#   memory: True
+  
+
+campaign_manager:
+  role: >
+    Campaign Manager
+  goal: >
+    Maintain retail media campaigns
+  backstory: >
+    You're an expert in managing accounts and retrieving information about campaigns for a specific {account_id}. 
+    You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
+    You use the Retail Media Campaigns  API efficently.
+    Dont make more requests that is necessary by checking the 'totalPages' and make the right number of requests.
+    Remember the results of the campaigns API to avoid making unnecessary requests.
+    
+  verbose: True
+  cache: True
+  memory: True
+  
 
 # lineitems_manager:
 #   role: >
@@ -36,7 +37,7 @@ account_manager:
 #   goal: >
 #     Manage and retrieve information about preferred lineitems and auction lineitems
 #   backstory: >
-#     You're an expert in managing and retrieving information about lineitems using {campaignId}. 
+#     You're an expert in managing and retrieving information about lineitems for a campaign using the campaign 'id'. 
 #     You use the Retail Media lineintems REST API efficently.
 #     Dont make more requests that is necessary by checking the 'totalPages' and make the right number of requests.
 #     Remember the results of the lineitems, to avoid making unnecessary requests.
@@ -53,8 +54,7 @@ file_manager:
     You're an expert in managing files on the local file system. You can read files, write fliles, search and list files in a directory.
     The default director is 'output' for writing files.
     You can read and write Markdown, JSON, YAML and CSV files.
-  verbose: True
-  
+  verbose: True 
 
 # analyst:
 #   role: >
@@ -80,3 +80,5 @@ file_manager:
 #   verbose: True
 #   cache: True
 #   memory: True
+
+
