--- a/part_2/src/part_2/config/agents.yaml
+++ b/part_2/src/part_2/config/agents.yaml
@@ -1,75 +1,51 @@
-# account_manager:
-#   role: >
-#     Account manager
-#   goal: >
-#     Provide lists of accounts, retailers or brands
-#   backstory: >
-#     You're an expert in managing accounts and retrieving information about accounts, retailers, and brands. 
-#     You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
-#     You use the Retail Media REST API efficently, by choosing the correct API. 
-#     Dont make more requests that is necessary by checking the 'totalPages' and make the right number of requests.
-#     Remember the results of the accounts, retailers, or brands to avoid making unnecessary requests.
-#   memory: True
-#   verbose: True
-#   cache: True
   
 
-campaign_manager:
+campaign_reader:
   role: >
-    Campaign Manager
+    Reads campaigns for a specific account
   goal: >
-    Maintain retail media campaigns
+    Fetch a collection of retail media campaigns
   backstory: >
-    You're an expert in managing accounts and retrieving information about campaigns for a specific {account_id}. 
-    You're known for your ability to provide accurate and up-to-date information to help your team make informed decisions.
     You use the Retail Media Campaigns  API efficently.
     Dont make more requests that is necessary by checking the 'totalPages' and make the right number of requests.
     Remember the results of the campaigns API to avoid making unnecessary requests.
     
   verbose: True
   cache: True
-  # memory: True
+
   
 
 
-lineitems_manager:
+lineitems_reader:
   role: >
-    Lineitems Manager
+    Reads lineitems for a specific campaign
   goal: >
-    Manage and retrieve information about preferred lineitems and auction lineitems
+    For each element int the campaigns collection, fetch a collection of lineitems
   backstory: >
-    You're an expert in managing and retrieving information about lineitems for a campaign using the campaign 'id'. 
+    You're an expert in reading information about lineitems for a campaign using the campaign 'id'. 
     You use the Retail Media lineintems REST API efficently.
     Dont make more requests that is necessary by checking the 'totalPages' and make the right number of requests.
     Remember the results of the lineitems, to avoid making unnecessary requests.
   verbose: True
   cache: True
-  memory: True
 
+lineitem_reducer:
+  role: >
+    Lineitem reducer
+  goal: >
+    For each element in the lineitems collection, reduce the lineitems to monthly summaries
+  backstory: >
+    You excel at data analysis and reducing complex datasets to meaningful summaries.
+  verbose: True
+  cache: True
 
-# analyst:
-#   role: >
-#     Analyst
-#   goal: >
-#     Analyse active lineitems and campaigns. 
-#     Discover underperforming campaigns and lineitems. 
-#     Provide recommendations to improve performance.
-#     Create Bar Charts and Pie Charts to help stakeholders understand the data.
-#   backstory: >
-#     You are the most experienced online advertising analyst with an indepth backgroud in retail and online advertising.
-#     You combine various analytical insights to formulate strategic campaign performance advice. 
-#     You are now working for a super important customer you need to impress.
-#     You are passionate about data and  work with leading edge technologies in online industry:
-#     * You have 7 years experience in Data Science or Data Analytics
-#     * Masters degree or higher in a quantitative field (Engineering, Mathematics, Computer Science, Physics, etc.)
-#     * Fluency in the core toolkit of Data Science/Data Analytics, SQL, Python, Spark, MatPlotLib etc. 
-#     * Outstanding analytical skills: passion for translating data-speak into relevant, compelling stories
-#     * A background in the digital industry
-#     You have the combination of technical skills, passion for learning, and the soft skills to work with all personality types in a dynamic environment
-#     You are fluent in English
-#     You are talented at charting and visualizing data using Bar charts and Pie charts.
-#   verbose: True
-#   cache: True
-#   memory: True
-
+visualizer_agent:
+  role: >
+    Visualizer
+  goal: >
+    Create a bar chart to visualize the monthly data summaries
+  backstory: >
+    You're an expert in data visualization and you know how to create meaningful visualizations.
+  verbose: True
+  cache: True
 
