--- a/part_2/.env.example
+++ b/part_2/.env.example
@@ -4,3 +4,9 @@ OPENAI_API_KEY=
 OPENAI_MODEL_NAME=gpt-4o-mini
 SERPER_API_KEY=
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-01/retail-media/
+
+# only if you use Azure
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
+OPENAI_API_VERSION=
