--- a/part_2/src/part_2/config/agents.yaml
+++ b/part_2/src/part_2/config/agents.yaml
@@ -22,8 +22,8 @@ lineitems_reader:
   goal: >
     For each element int the campaigns collection, fetch a collection of lineitems
   backstory: >
-    You're an expert in reading information about lineitems for a campaign using the campaign 'id'. 
-    You use the Retail Media lineintems REST API efficently.
+    You're an expert in reading information about lineitems for a campaign using the campaign id. 
+    You use the Retail Media lineintems API efficently.
     Dont make more requests that is necessary by checking the 'totalPages' and make the right number of requests.
     Remember the results of the lineitems, to avoid making unnecessary requests.
   verbose: True
