--- a/part_2/src/part_2/config/tasks.yaml
+++ b/part_2/src/part_2/config/tasks.yaml
@@ -19,24 +19,25 @@ fetch_auction_lineitems:
     If there total items across all pages is zero simply provide an empty list.
     Use the pageIndex and pageSize parameters to get all lineitems for the campaign.
     Do not make more API calls than necessary.
-    Reformat each lineitem by removing the 'type' field and remap the fields 'startDate', 'name', 'budget' to the root level, then delete the 'attributes' field.
+    Reformat each lineitem by:
+    1. removing the 'type' field 
+    2. move the fields 'campaignId', 'startDate', 'name', 'budget', 'status' to the root level.
+    3. delete the 'attributes' field.
     If the budget is not provided, set it to 0.
   expected_output: A collection of auction lineitems formatted as JSON.
 
-# preferred_lineitems:
-#   description: >
-#     Interate through the cached campaigns and for each campaign use the campaigh {id} to get the preferred lineitems.
-#     If there total items across all pages is zero simply provide an empty list.
-#     Use the pageIndex and pageSize parameters to get all lineitems for the campaign.
-#     Do not make more API calls than necessary.
-#     Write a file contaning the list of preferred lineitems in JSON format, the directory is 'output', 
-#     the file name is '{campaign name}_preferred_lineitems.json' and
-#     the content is the list of preferred linitems formated in JSON.
-#   expected_output: >
-#    A list of preferred lineitems formatted in JSON.
-#   agent: lineitems_manager
-#   context:
-#     - campaigns
+preferred_lineitems:
+  description: >
+    for each element in the campaigns collection, fetch the preferred lineitems using the campaign id.
+    If there total items across all pages is zero simply provide an empty list.
+    Use the pageIndex and pageSize parameters to get all lineitems for the campaign.
+    Do not make more API calls than necessary.
+    Reformat each lineitem by:
+    1. removing the 'type' field 
+    2. move the fields 'campaignId', 'startDate', 'name', 'budget', 'status' to the root level.
+    3. delete the 'attributes' field.If the budget is not provided, set it to 0.
+  expected_output: >
+   A collection of preferred lineitems formatted as JSON.
 
 sumarise_monthly_lineitem_budget:
   description: >
