--- a/part_2/pyproject.toml
+++ b/part_2/pyproject.toml
@@ -2,7 +2,7 @@
 name = "part_2"
 version = "0.1.0"
 description = "part_2 using crewAI"
-authors = ["Your Name <you@example.com>"]
+authors = ["Peter Milne <helipilot50@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.12,<=3.13"
