--- a/part_1/.env.example
+++ b/part_1/.env.example
@@ -2,4 +2,11 @@ CRITEO_CLIENT_ID=
 CRITEO_CLIENT_SECRET=
 OPENAI_API_KEY=
 OPENAI_MODEL_NAME=gpt-4o-mini
+SERPER_API_KEY=
 RETAIL_MEDIA_API_URL=https://api.criteo.com/2024-01/retail-media/
+
+# only if you use Azure
+AZURE_OPENAI_API_KEY=
+AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
+OPENAI_API_VERSION=
